show user posts

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,3 +2,18 @@
   margin-top: 2em;
   margin-bottom: 1em;
 }
+
+img.avatar {
+  width: 96px;
+  height: 96px;
+  border-radius: 48px;
+  border: 2px solid yellow;
+}
+
+.user-info-container {
+  text-align: center;
+}
+
+.user-info-wrapper {
+  display: inline-block;
+}
