--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,9 @@
-body, div {
+body,
+html,
+div,
+a,
+span,
+img {
   margin: 0;
   line-height: 0;
 }
@@ -21,6 +26,7 @@ body, div {
 .foot p {
   text-align: center;
   color: #777;
+  font-size: 16px;
 }
 
 .image-container {
@@ -43,7 +49,63 @@ body, div {
 }
 
 .qrcode {
-  position: absolute;;
+  position: absolute;
+  ;
   top: 284px;
   left: 608px;
+}
+
+html,
+body {
+  font-size: 20px;
+}
+
+a:focus {
+  outline: none
+}
+
+a {
+  text-decoration: none;
+}
+
+.block {
+  display: block;
+}
+
+.page {
+  position: relative;
+  overflow: hidden;
+  width: 16rem;
+  margin: 0 auto;
+}
+
+.btn0 {
+  position: absolute;
+  top: 19rem;
+  left: 15%;
+  width: 7rem;
+}
+
+@media only screen and (max-width: 360px) and (min-width: 321px) {
+  html {
+    font-size: 22.5px
+  }
+}
+
+@media only screen and (max-width: 380px) and (min-width: 361px) {
+  html {
+    font-size: 23.4px
+  }
+}
+
+@media only screen and (max-width: 415px) and (min-width: 381px) {
+  html {
+    font-size: 25.9px;
+  }
+}
+
+@media only screen and (min-width: 415px) {
+  html {
+    font-size: 37.5px;
+  }
 }
