--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -44,3 +44,15 @@ img.avatar {
 *[hidden] {
   display: none !important;
 }
+
+.new-link {
+  margin-bottom: 8px;
+}
+
+.event-thumbnail {
+}
+
+.thumbnail.event-thumbnail {
+  max-width: 200px;
+  display: inline-block;
+}
