--- a/public/css/app.css
+++ b/public/css/app.css
@@ -110,11 +110,21 @@ a {
 }
 
 .wechat-background {
+  display: none;
+  opacity: 0.7;
+  background: black;
   position: fixed;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   z-index: 1;
+}
+
+.wechat-prompt {
+  position: absolute;
+  width: 200px;
+  top: 0;
+  right: 0;
 }
 
