--- a/views/share_post.erb
+++ b/views/share_post.erb
@@ -2,9 +2,93 @@
 <html>
 <head>
   <title>+1</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
   <style type="text/css">
+    .image-avatar {
+      float: left;
+      width: 50px;
+      height: 50px;
+      border-radius: 50px;
+      margin-right: 10px;
+      margin-top: 10px;
+    }
+
+    .user-detail {
+      padding-top: 26px;
+    }
+
+    .post-image {
+      width: 100%;
+      margin-top: 20px;
+    }
+
+    .post-text {
+      margin: 10px 0;
+      text-align: center;
+    }
+
+    .post-detail {
+      margin: 10px 0;
+    }
+
+    .divding-line {
+      height: 2px;
+      background: #fed724;
+    }
+
+    .comment-detail {
+      padding-top: 10px;
+    }
+
+    .comment-content {
+      margin: 10px;
+    }
+
+    .post-no-image {
+      width: 100%;
+      text-align: center;
+      padding-top: 120px;
+      height: 180px;
+    }
   </style>
+
+  <script type="text/javascript">
+  document.addEventListener('DOMContentLoaded', function() {
+
+  });
+  </script>
 </head>
 <body>
+  <div>
+      <img class="image-avatar" src="<%= image_url(@post.user.avatar) =%>" >
+    <div class="user-detail">
+      <span><%= @post.user.nickname =%></span>
+      <span><%= @post.user.gender =%></span>
+    </div>
+  </div>
+    <% if(@post.post_pages[0].image)%>
+      <img id="post-image" class="post-image" src="<%= image_url(@post.post_pages[0].image) =%>">
+      <div class="post-text"><%= @post.post_pages[0].text =%></div>
+    <% else %>
+    <div class="post-no-image"><%= @post.post_pages[0].text =%></div>
+    <% end %>
+  <div class="post-detail">
+    <span><%= @post.post_pages[0].created_at =%></span>
+    <span><%= @post.spreads_count =%></span>
+    <span><%= @post.comments.length=%></span>
+  </div>
+  <div class="divding-line"></div>
+  <div class="commnet-container">
+    <% @post.comments.each do |comment| %>
+    <div>
+    <img class="image-avatar" src="<%= image_url(comment.user.avatar) =%>">
+    <div class="comment-detail">
+      <span><%= @post.user.nickname =%></span>
+      <p class="comment-content"><%= comment.content =%></p>
+    </div>
+    </div>
+    <% end %>
+  </div>
 </body>
 </html>
