--- a/views/share_post.erb
+++ b/views/share_post.erb
@@ -49,8 +49,8 @@
     .post-no-image {
       width: 100%;
       text-align: center;
-      padding-top: 120px;
-      height: 180px;
+      padding-top: 80px;
+      height: 80px;
     }
   </style>
 
@@ -63,38 +63,38 @@
 <body>
   <div>
     <% if (@post.user.avatar) %>
-      <img class="image-avatar" src="<%= image_url(@post.user.avatar) =%>" >
+      <img class="image-avatar" src="<%= image_url(@post.user.avatar) %>" >
     <% else %>
       <img class="image-avatar" src="../images/default_user_avatar.png">
     <% end %>
     <div class="user-detail">
-      <span><%= @post.user.nickname =%></span>
-      <span><%= @post.user.gender =%></span>
+      <span><%= @post.user.nickname %></span>
+      <span><%= @post.user.gender %></span>
     </div>
   </div>
     <% if(@post.post_pages[0].image)%>
-      <img id="post-image" class="post-image" src="<%= image_url(@post.post_pages[0].image) =%>">
-      <div class="post-text"><%= @post.post_pages[0].text =%></div>
+      <img id="post-image" class="post-image" src="<%= image_url(@post.post_pages[0].image) %>">
+      <div class="post-text"><%= @post.post_pages[0].text %></div>
     <% else %>
-    <div class="post-no-image"><%= @post.post_pages[0].text =%></div>
+    <div class="post-no-image"><%= @post.post_pages[0].text %></div>
     <% end %>
   <div class="post-detail">
-    <span><%= @post.post_pages[0].created_at.to_date =%></span>
-    <span><%= @post.spreads_count =%></span>
-    <span><%= @post.comments.length=%></span>
+    <span><%= @post.post_pages[0].created_at.to_date %></span>
+    <span><%= @post.spreads_count %></span>
+    <span><%= @post.comments.length %></span>
   </div>
   <div class="divding-line"></div>
   <div class="commnet-container">
     <% @post.comments.each do |comment| %>
     <div>
       <% if (comment.user.avatar) %>
-      <img class="image-avatar" src="<%= image_url(comment.user.avatar) =%>" >
+      <img class="image-avatar" src="<%= image_url(comment.user.avatar) %>" >
       <% else %>
       <img class="image-avatar" src="../images/default_user_avatar.png">
       <% end %>
     <div class="comment-detail">
-      <span><%= @post.user.nickname =%></span>
-      <p class="comment-content"><%= comment.content =%></p>
+      <span><%= @post.user.nickname %></span>
+      <p class="comment-content"><%= comment.content %></p>
     </div>
     </div>
     <% end %>
