--- a/views/share_post.erb
+++ b/views/share_post.erb
@@ -54,7 +54,9 @@
     }
 
     .comment-content {
-      margin: 10px;
+      overflow: hidden;
+      margin-right: 10px;
+      word-wrap: break-word;
     }
 
     .post-no-image {
@@ -83,6 +85,12 @@
     .reply-comment {
       padding-left: 30px;
     }
+
+    .comment-detail{
+      color: #999999;
+      font-size: 12px;
+    }
+
   </style>
 </head>
 <body>
