--- a/views/share_post.erb
+++ b/views/share_post.erb
@@ -109,7 +109,6 @@
     <% end %>
   <div class="post-detail">
     <div style="float: left;">
-      <input type="hidden" id="created-time" value='<%= @post.post_pages[0].created_at.to_s %>' >
       <span id="time-ago"><%= time_ago(@post.post_pages[0].created_at)%></span>
     </div>
     <div style="float: right; margin-right: 20px">
@@ -122,25 +121,7 @@
   <div class="divding-line"></div>
   <div class="commnet-container">
     <% sort_comment(@post.comments).each do |comment| %>
-      <% if(!comment.reply_to_id)%>
-        <div>
-          <%= user_avatar(comment.user)%>
-          <div class="comment-detail">
-            <%= name_span(comment.user)%>
-            <p class="comment-content"><%= comment.content %></p>
-          </div>
-        </div>
-      <% else %>
-        <div class="reply-comment">
-          <%= user_avatar(comment.user)%>
-          <div class="comment-detail">
-            <%= name_span(comment.user)%>
-            <span>回复</span>
-            <%= name_span(get_reply_comment(comment.reply_to_id).user)%>
-            <p class="comment-content"><%= comment.content %></p>
-          </div>
-        </div>
-      <% end %>
+      <%= comment_div(comment) %>
     <% end %>
   </div>
 </body>
